get user by ID endpoint
