# src/users/users.routes.config.ts
@@ -2,6 +2,8 @@ import express from "express";
 import CommonRoutesConfig from '../common/common.routes.config';
 import {db_config} from "../config/db.config";
 import UserRepository from "./user.repository";
+import {HttpStatuses} from "../constants/HttpStatuses";
+import {NOT_FOUND_MESSAGE} from "../constants/ErrorMessages";
 
 const pgp = require('pg-promise')();
 const db = pgp(db_config);
@@ -17,17 +19,20 @@ class UsersRoutes extends CommonRoutesConfig {
     await this.app.route(`/api/v1/users`)
       .get((req: express.Request, res: express.Response) => {
         this.userRepository.all()
-          .then(data => {
-            return res.json(data)
-          });
+          .then(data => res.json(data));
       })
-      .post((req:express.Request, res:express.Response) => {
-        res.status(200).send('Post users');
-      });
 
-    this.app.route(`/users/:userId`)
-      .all((req: express.Request, res: express.Response, next: express.NextFunction) => {
-        next();
+    await this.app.route(`/api/v1/users/:userId`)
+      .get((req: express.Request, res: express.Response) => {
+        this.userRepository.findById(req.params.userId)
+          .then(data => res.json(data))
+          .catch(() => {
+            res.status(HttpStatuses.NotFount)
+            res.json({
+              code: HttpStatuses.NotFount,
+              message: NOT_FOUND_MESSAGE
+            })
+          })
       })
       .get((req: express.Request, res: express.Response) => {
         res.status(200).send(`GET requested for id ${req.params.userId}`);
